--- a/sorte_de_microcontroleur.html
+++ b/sorte_de_microcontroleur.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microcontroleur</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <h1>Les Microcontrôleur</h1>
@@ -12,7 +13,7 @@
     <main>
         <h2>Types de Microcontrôleur</h2>
 
-            <h3>L'Esp32</h3>
+            <div><h3>L'Esp32</h3>
                 <figure>
                     <img src="esp32_devkitc.jpg" width="250" alt="Microcontroleur esp32">  
                 </figure>
@@ -25,7 +26,9 @@
                             <li>Tension de fonctionnement : 3,3V </li>
                         </ul>
                             <p>Pour plus de details clicker <a href="https://www.espressif.com/en/products/socs/esp32">Ici</a></p>
-            <h3>Arduino Uno</h3>
+                            </div>
+
+            <div><h3>Arduino Uno</h3>
                 <figure>
                     <img src="Arduino_Uno_-_R3.jpg" width="250" alt="Microcontroleur Arduino">  
                 </figure>
@@ -38,8 +41,9 @@
                             <li>Tension d’alimentation : 7 à 12V (régulée à 5V)  </li>
                         </ul>
                             <p>Pour plus de details clicker <a href="https://docs.arduino.cc/hardware/uno-rev3/">Ici</a></p>
+                            </div>
 
-            <h3>Raspberry Pi Pico</h3>
+            <div><h3>Raspberry Pi Pico</h3>
                  <figure>
                     <img src="Raspberry_Pi_Pico_oblique.jpg" width="250" alt="Microcontroleur Raspberry_Pi_Pico"> 
                 </figure>
@@ -51,7 +55,8 @@
                             <li>RAM (SRAM) :  264 Ko</li>
                             <li>Tension d’alimentation : 3,3V</li>
                         </ul>
-                            <p>Pour plus de details clicker <a href="https://www.raspberrypi.com/documentation/microcontrollers/pico-series.html">Ici</a></p>       
+                            <p>Pour plus de details clicker <a href="https://www.raspberrypi.com/documentation/microcontrollers/pico-series.html">Ici</a></p> 
+                            </div>      
     </main>    
 
     <footer>copyright by august</footer>
